--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 	position: absolute;
 	left: 0; right: 0;
 	top: 0; bottom: 0;
-  margin: auto;
+  	margin: auto;
 	height: 50vw; 
 	width: 75vw;
 }
@@ -25,8 +25,8 @@ canvas {
 	height: 50vw; 
 	width: 75vw;
 	margin-bottom: -10vw;
-  margin-top: -10vh;
-  z-index: -1;
+ 	margin-top: -10vh;
+  	z-index: -1;
 }
 
 .ctrl-panel {
@@ -54,8 +54,8 @@ canvas {
 }
 
 .clickable {
-  min-height: 48px;
-  min-width: 48px;
+  	min-height: 48px;
+  	min-width: 48px;
 	cursor: pointer;
 	font-size: 130%;
 }
@@ -75,7 +75,7 @@ canvas {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 2;
+    font-size: 1.5vw;
     margin: 1ex;
     cursor: pointer;
     transition: .4s;
@@ -90,4 +90,35 @@ canvas {
 #start:hover {
   background-color: #bada55;
   color: black;
+}
+
+.unselectable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media screen and (max-width: 500px) {
+	.btn {
+		font-size: 3vw;
+	}
+
+	.num {
+		font-size: 100%;
+	}
+
+	.ctrl-panel {
+		font-size: 150%;
+	}
+
+	canvas {
+		height: 67vw;
+		width: 100vw;
+	}
+
+	.container {
+		height: 67vw;
+		width: 100vw;
+	}
 }
