--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 html {
 	font-family: 'Raleway', sans-serif;
 	background-color: #F9F9F9;
-  white-space: nowrap;
+    white-space: nowrap;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
 }
 
 .container {
