--- a/style.css
+++ b/style.css
@@ -1,70 +1,71 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200');
-
 @font-face {
-	font-family: "Roboto-Thin";
-	src: url("https://cdn.rawgit.com/halimb/threejs-projects/1ba18e17/pomodoro/models/Roboto-Thin.ttf");
+    font-family: "Roboto-Thin";
+    src: url("https://cdn.rawgit.com/halimb/threejs-projects/1ba18e17/pomodoro/models/Roboto-Thin.ttf");
 }
 
 html {
-	font-family: 'Raleway', sans-serif;
-	background-color: #F9F9F9;
+    font-family: 'Raleway', sans-serif;
+    background-color: #F9F9F9;
     white-space: nowrap;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-	-webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .container {
-	position: absolute;
-	left: 0; right: 0;
-	top: 0; bottom: 0;
-  	margin: auto;
-	height: 50vw; 
-	width: 75vw;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 50vw;
+    width: 75vw;
 }
 
 canvas {
-	background-color: #F9F9F9;
-	height: 50vw; 
-	width: 75vw;
-	margin-bottom: -10vw;
- 	margin-top: -10vh;
-  	z-index: -1;
+    background-color: #F9F9F9;
+    height: 50vw;
+    width: 75vw;
+    margin-bottom: -10vw;
+    margin-top: -10vh;
+    z-index: -1;
 }
 
 .ctrl-panel {
-	user-select: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	cursor: default;
-	font-size: 220%;
-	position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    cursor: default;
+    font-size: 220%;
+    position: relative;
 }
 
 .rest-ctrl {
-	left: 25%;
+    left: 25%;
 }
 
 .work-ctrl {
-	left: 75%;
+    left: 75%;
 }
 
-.center-pos{
-	text-align: center;
-	position: absolute;
-	-webkit-transform: translate(-50%, 0);
+.center-pos {
+    text-align: center;
+    position: absolute;
+    -webkit-transform: translate(-50%, 0);
 }
 
 .clickable {
-  	min-height: 48px;
-  	min-width: 48px;
-	cursor: pointer;
-	font-size: 130%;
+    min-height: 48px;
+    min-width: 48px;
+    cursor: pointer;
+    font-size: 130%;
 }
 
 .num {
-	font-family: "Roboto-Thin";
-	font-size: 90%
+    font-family: "Roboto-Thin";
+    font-size: 90%
 }
 
 .btn {
@@ -85,42 +86,38 @@ canvas {
 }
 
 .btn:hover {
-	background-color: #000000;
-	color: #F9F9F9;
+    background-color: #000000;
+    color: #F9F9F9;
 }
 
 #start:hover {
-  background-color: #bada55;
-  color: black;
+    background-color: #bada55;
+    color: black;
 }
 
 .unselectable {
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 @media screen and (max-width: 500px) {
-	.btn {
-		font-size: 3vw;
-	}
-
-	.num {
-		font-size: 100%;
-	}
-
-	.ctrl-panel {
-		font-size: 150%;
-	}
-
-	canvas {
-		height: 67vw;
-		width: 100vw;
-	}
-
-	.container {
-		height: 67vw;
-		width: 100vw;
-	}
+    .btn {
+        font-size: 3vw;
+    }
+    .num {
+        font-size: 100%;
+    }
+    .ctrl-panel {
+        font-size: 150%;
+    }
+    canvas {
+        height: 67vw;
+        width: 100vw;
+    }
+    .container {
+        height: 67vw;
+        width: 100vw;
+    }
 }
